Tesi quasi finita

--- a/cap1.tex
+++ b/cap1.tex
@@ -1,7 +1,12 @@
 \chapter{Introduzione}
 Nell'ambito della sicurezza informatica, una delle sfide principali è l'identificazione tempestiva e l'analisi approfondita delle minacce. Le organizzazioni, pubbliche e private, devono affrontare l'inevitabile complessità delle reti, la diversità delle minacce sia interne che esterne alla rete privata. Ciò in quanto la mancanza di strumenti efficaci per il rilevamento delle intrusioni e la gestione delle minacce può portare a vulnerabilità e rischi per la sicurezza.\\
 IBM stima che nel 2023 il costo medio di un data breach è di 4,5 milioni di dollari americani. In questo contesto, dove le minacce cibernetiche sono in costante evoluzione, diventa cruciale sviluppare e implementare metodologie avanzate per proteggere i dati, gli utenti, i dispositivi e le reti dalle intrusioni, utilizzando tecniche proattive per rilevare, prevenire e rispondere agli attacchi informatici.\\
-Tra esse è possibile annoverare l’utilizzo di un honeypot, come T-Pot, oppure di un IDPS, come Darktrace. Questi sistemi, approfonditi nel presente lavoro, sono state utilizzate durante l’esperienza di tirocinio al fine di mitigare minacce interne ed esterne alla rete interna.\\
-Rispetto alle soluzioni tradizionali, l’approccio proposto durante il tirocinio offre una maggiore visibilità delle minacce in tempo reale, consentendo una risposta più rapida e mirata agli attacchi: integrando IDPS e honeypot, si ottiene una difesa a strati più robusta e una capacità avanzata di rilevamento delle minacce sia note che sconosciute.\\
-Attraverso la sperimentazione dell'honeypot verranno descritte le principali minacce nel mondo della sicurezza informatica, inoltre verranno esaminati diversi scenari di attacco specificando le procedure per mitigare problemi al cliente.\\
-Il lavoro svolto si concentra sulla ricerca di soluzioni pratiche e efficaci per affrontare le sfide sempre crescenti nel campo della sicurezza informatica, fornendo un contributo significativo alla protezione delle reti e dei sistemi informatici dalle minacce cibernetiche.
+Tra esse è possibile annoverare l’utilizzo di un honeypot, come T-Pot, oppure di un IDPS, come Darktrace. Questi sistemi, approfonditi nel presente lavoro, sono stati utilizzati durante l’esperienza di tirocinio al fine di mitigare minacce interne ed esterne alla rete interna.\\
+Rispetto alle soluzioni tradizionali, che si basano principalmente su firewall per il perimetro esterno e policy di routing e VLAN per il perimetro interno, l'implementazione di un honeypot e lo studio delle possibili minacce rilevabili tramite IDPS durante il tirocinio offrono una maggiore visibilità delle minacce in tempo reale. Ciò consente una risposta più rapida e mirata agli attacchi, grazie all'integrazione di IDPS e honeypot, aumenta la possibilità di prevenire incidenti tramite la deviazione di attacchi nel caso sia al di fuori del perimetro o tramite il monitoraggio della rete nel caso sia all'interno.\\
+Attraverso la sperimentazione dell'honeypot verranno descritte le principali minacce e vettori di attacco nel mondo della sicurezza informatica, inoltre grazie a Darktrace verranno esaminati diversi potenziali scenari di attacco e problemi giornalieri specificando le procedure per mitigare i rischi.\\
+Il lavoro svolto si concentra sulla ricerca di soluzioni pratiche e efficaci per affrontare le sfide sempre crescenti nel campo della sicurezza informatica, fornendo un contributo significativo alla prevenzione di possibili attacchi e alla diminuzione del traffico malevolo su sistemi in uso.
+\begin{quote}
+	{\small Nel capitolo $2$ viene esaminata la teoria relativa agli honeypot e agli IDS, approfondendo le definizioni e le tipologie esistenti. Si analizzano poi in dettaglio le piattaforme utilizzate per implementare tali concetti.\\
+	Nel capitolo $3$ vengono esplorati gli utilizzi pratici delle suddette piattaforme, includendo configurazioni, dati raccolti e esempi di attacchi rilevati.\\
+	Infine, nel capitolo $4$ viene presentata la conclusione, riassumendo le principali scoperte e riflessioni emerse durante lo studio e l'implementazione delle soluzioni discusse.}
+\end{quote}
