--- a/cap4.tex
+++ b/cap4.tex
@@ -1,7 +1,5 @@
 \chapter{Conclusioni}
-\section{Principali conclusioni}
-Il lavoro descritto in questa tesi ha condotto con successo all'implementazione di un honeypot e alla gestione di un IDPS, rappresentando un passo significativo verso la sicurezza informatica aziendale. L'adozione di un progetto open-source predefinito ha ottimizzato il processo, consentendo di concentrare le risorse sull'ampliamento e il miglioramento dei servizi offerti. Sebbene questo abbia semplificato la fase di installazione, l'integrazione con il SIEM ha richiesto uno sforzo aggiuntivo, evidenziando l'importanza di una comprensione approfondita del contesto e dei requisiti aziendali.\\
-Il percorso seguito, partendo dalla fase di studio e definizione degli obiettivi, attraverso la progettazione e l'implementazione del progetto, ha dimostrato di essere efficace nel raggiungimento degli obiettivi prefissati. L'honeypot sviluppato è stato in grado di alleviare il traffico dannoso proveniente dagli attaccanti, mentre le competenze acquisite nell'uso di Darktrace hanno arricchito le capacità difensive aziendali.\\
-Guardando al futuro, il prossimo passo sarà l'offerta di questo servizio ai clienti. A tal fine, è stata predisposta una documentazione esaustiva per facilitare l'implementazione e l'utilizzo della piattaforma, garantendo che i vantaggi e le potenzialità dell'honeypot e dell'IDPS possano essere sfruttati appieno. La continua ricerca di miglioramenti e l'adattamento alle esigenze emergenti del panorama della sicurezza informatica rimarranno al centro delle future attività.
-\section{Riflessioni personali sull'esperienza del tirocinio}
-Durante il tirocinio, si è avuta l'opportunità di mettere in pratica la passione per la sicurezza informatica, un ambito che ha sempre affascinato. Questo percorso formativo non è stato solo un'occasione per acquisire esperienza sul campo, ma anche per applicare e consolidare le conoscenze acquisite durante il percorso universitario. In particolare, i corsi di "Sistemi operativi", "Cyber-physical security" e "Protocolli e architetture di rete" si sono rivelati fondamentali, fornendo le competenze necessarie per affrontare sfide complesse nel contesto della sicurezza informatica. Questo tirocinio ha rappresentato un prezioso ponte tra teoria e pratica, consentendo di approfondire argomenti chiave e di affinare le abilità in un ambiente professionale.
+Il lavoro illustrato in questa tesi ha segnato un importante traguardo nell'ambito della sicurezza informatica aziendale, attraverso l'efficace implementazione di un honeypot e la gestione di un IDPS. L'adozione di un progetto open-source predefinito ha agevolato il percorso, permettendo di dedicare maggiori risorse all'espansione e al potenziamento dei servizi offerti. Sebbene ciò abbia semplificato la fase iniziale di installazione, l'integrazione con il SIEM ha richiesto un impegno sia di tempo che di studio aggiuntivo, evidenziando l'importanza di una profonda comprensione del contesto aziendale e dei suoi requisiti specifici.\\
+Il percorso seguito, partendo dalla fase preliminare di studio e definizione degli obiettivi, attraverso la fase di progettazione e l'effettiva implementazione del progetto, ha dimostrato di essere un metodo efficace nel conseguimento degli obiettivi prefissati. L'honeypot sviluppato è risultato efficace nel mitigare il traffico dannoso proveniente dagli attaccanti, mentre le competenze acquisite nell'utilizzo di Darktrace hanno notevolmente arricchito le capacità difensive aziendali.\\
+Per quanto riguarda i futuri sviluppi, il prossimo passo potrebbe essere quello di valutare l'offerta del servizio ai clienti, qualora vengano riscontrati benefici a lungo termine, da affiancare al monitoraggio già fornito dal SOC tramite Darktrace. In tal senso, potrebbe essere considerata l'installazione delle distribuzioni sensore di T-pot all'interno delle subnet utilizzate dai clienti. Queste distribuzioni sarebbero in grado di rilevare e bloccare qualsiasi attività sospetta tramite il SIEM, offrendo così un livello aggiuntivo di protezione.\\
+Al fine di agevolare l'adozione di questa soluzione da parte dei clienti, è stata redatta una documentazione esaustiva, finalizzata a semplificare l'implementazione e l'utilizzo della piattaforma, garantendo che i vantaggi e le potenzialità dell'honeypot e dell'IDPS possano essere pienamente sfruttati. La ricerca continua di miglioramenti e l'adattamento alle esigenze emergenti del panorama della sicurezza informatica rimarranno al centro delle future attività, con l'obiettivo primario di garantire una protezione sempre più efficace contro le minacce in continua evoluzione.
