--- a/sample.bib
+++ b/sample.bib
@@ -67,26 +67,6 @@
 	institution = {International Journal of Computer Science Issues},
 	year = 2013
 }
-@conference{threat1,
-	key = {Darktrace Academy},
-	title = {Threat Visualizer part 1 - Familiarization},
-	year = 2023
-}
-@conference{threat2,
-	key = {Darktrace Academy},
-	title = {Threat Visualizer part 2 - Investigation},
-	year = 2023
-}
-@conference{model,
-	key = {Darktrace Academy},
-	title = {Cyber Analyst Part 2 - Model Optimizationn},
-	year = 2023
-}
-@conference{respond,
-	key = {Darktrace Academy},
-	title = {Darktrace RESPOND/Network},
-	year = 2023
-}
 @techreport{honeypot,
 	author = {Eric Cole, Stephen Northcutt},
 	title = {Honeypots: A Security Manager's Guide to Honeypots},
@@ -164,4 +144,28 @@
 	institution = {National Institute of Standards and Technology},
 	date = {2001},
 	OPTurl = {https://nvlpubs.nist.gov/nistpubs/Legacy/SP/nistspecialpublication800-31.pdf},
+}
+@misc{threat1,
+	author={Darktrace Limited Holding},
+	title = {Threat Visualizer part 1 - Familiarization},
+	howpublished = {\url{https://customerportal.darktrace.com}},
+	year = {2023}
+}
+@misc{threat2,
+	author={Darktrace Limited Holding},
+	title = {Threat Visualizer part 2 - Investigation},
+	howpublished = {\url{https://customerportal.darktrace.com}},
+	year = 2023
+}
+@misc{model,
+	author={Darktrace Limited Holding},
+	title = {Cyber Analyst Part 2 - Model Optimizationn},
+	howpublished = {\url{https://customerportal.darktrace.com}},
+	year = 2023
+}
+@misc{respond,
+	author={Darktrace Limited Holding},
+	title = {Darktrace RESPOND/Network},
+	howpublished = {\url{https://customerportal.darktrace.com}},
+	year = 2023
 }
