--- a/cap2.tex
+++ b/cap2.tex
@@ -1,21 +1,8 @@
 \chapter{Fondamenti teorici su Honeypot e IDS}
-\begin{enumerate}
-	\item Introduzione agli honeypot
-	\begin{enumerate}
-		\item Definizione e origine degli honeypot
-		\item Tipologie di honeypot
-		\item Tpot: panoramica
-		\item Tpot: scopo e utilità in ambiente di tirocinio
-	\end{enumerate}
-	\item Teoria sugli IDS
-	\begin{enumerate}
-		\item Definizione e origine degli IDS
-		\item Tipologie di IDS
-		\item Darktrace: panoramica
-		\item Darktrace DETECT
-		\item Darktrace RESPOND
-	\end{enumerate}
-\end{enumerate}
+\begin{quote}
+	{\small Nella sezione $2.1$ di questo capitolo vengono delineate le fondamenta degli honeypot, includendo la loro definizione e origine ($2.1.1$), le varie tipologie esistenti ($2.1.2$), un'analisi teorica approfondita di T-Pot con un'occhiata tecnica ($2.1.3$) e una chiara esposizione degli obiettivi del tirocinio ($2.1.4$).\\
+	Nella sezione $2.2$ del capitolo, si approfondisce la definizione e la storia degli IDS ($2.2.1$), seguita da una panoramica dettagliata di Darktrace ($2.2.2$), l'IDPS utilizzato. Successivamente, viene fornita un'analisi approfondita sul funzionamento di Darktrace ($2.1.3$)($2.1.4$).}
+\end{quote} 
 \section{Introduzione agli honeypot}
 \subsection{Definizione e origine degli honeypot}
 Un honeypot, come definito dal NIST (National Institute of Standards and Technology), è un sistema o una risorsa del sistema che è progettata per attrarre potenziali \textit{cracker} e \textit{intrusori}, il concetto alla base è quello di impiantare deliberatamente in un sistema apparenti vulnerabilità con lo scopo di rilevare attacchi e confondere i possibili attaccanti su quali vulnerabilità sfruttare\cite{nistHoneypot}.\\
